--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,12 @@ on:
   
     
 jobs:
-  name: Importacion de Base de datos
-  uses: gtadam/mysql-deploy-action@v1
-  with:
-    DATABASE_HOST: 'db.host.io'
-    DATABASE_PORT: '3306'
-    DATABASE_NAME: 'mydb'
-    DATABASE_USERNAME: 'root'
-    DATABASE_PASSWORD: 'password'
-    DATABASE_SCRIPT: 'script.sql'
+  Importacion de Base de datos:
+    uses: gtadam/mysql-deploy-action@v1
+    with:
+      DATABASE_HOST: 'db.host.io'
+      DATABASE_PORT: '3306'
+      DATABASE_NAME: 'mydb'
+      DATABASE_USERNAME: 'root'
+      DATABASE_PASSWORD: 'password'
+      DATABASE_SCRIPT: 'script.sql'
