--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,12 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   Import_SQL:
-    uses: gtadam/mysql-deploy-action@v1
-    with:
-      DATABASE_HOST: 'db.host.io'
-      DATABASE_PORT: '3306'
-      DATABASE_NAME: 'mydb'
-      DATABASE_USERNAME: 'root'
-      DATABASE_PASSWORD: 'password'
-      DATABASE_SCRIPT: 'script.sql'
+    - name: MySQL Deploy Action
+      uses: calxus/mysql-deploy-action@v1
+      with:
+        DATABASE_HOST: 'db.host.io'
+        DATABASE_PORT: '3306'
+        DATABASE_NAME: 'mydb'
+        DATABASE_USERNAME: 'root'
+        DATABASE_PASSWORD: 'password'
+        DATABASE_SCRIPT: 'script.sql'
