--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v2
       - uses: gtadam/mysql-deploy-action@v1
         with:
-          DATABASE_HOST: 'sql234.main-hosting.eu'
+          DATABASE_HOST: 'database-testing.capjeqwtb4vf.us-east-2.rds.amazonaws.com'
           DATABASE_PORT: '3306'
           DATABASE_NAME: 'u463129590_github_actions'
-          DATABASE_USERNAME: 'u463129590_github_actions'
+          DATABASE_USERNAME: 'admin'
           DATABASE_PASSWORD: 'Ns2b7bfqbf!'
           DATABASE_SCRIPT: 'script.sql'
